# fastapi_template

./: .zshrc  README.md  docker-compose.yml  justfile  pyproject.toml
scripts/: build.sh  run.sh  start-dev.sh  start-prod.sh
src/: config.py  main.py  utils.py
src/auth/: config.py  schemas.py
src/external_service/: client.py  schemas.py
